# stutter

./: .gitignore  Cargo.toml  Makefile  README.md  writeup.md  zip_proj.py  zip_proj.sh
compiler/: README.md
compiler/runtime/: start.rs
compiler/src/: assembly.rs  ast.rs  compile.rs  main.rs  parse.rs  util.rs
compiler/tests/: all_tests.rs  fun_in_body.snek  invalid_decl_no_body.snek
compiler/tests.bak/: all_tests.rs  fact.snek
input/: bst.snek  cycle-equal-1.snek  cycle-equal-2.snek  cycle-equal-3.snek  cycle-print-1.snek  cycle-print-3.snek  equal.snek  error-bounds.snek  error-tag.snek  error3.snek  simple_examples.snek
proj1_adder/: .gitignore  Makefile  gen_test_case.py  transcript.txt
proj1_adder/src/: main.rs
proj1_adder/test/: add_31.snek  add_neg.snek  invert.snek  neg_add.snek  neg_sub_31.snek
proj2_boa/: assignment.md
proj2_boa/src/: emit.rs  main.rs  (+1 more)
proj4/: .gitignore  compiler_21.md  compiler_34.md
runtime/: start.rs
src/: assembly.rs  ast.rs  llvm.rs  main.rs  parse.rs  util.rs  x86.rs
tests/: all_tests.rs  duplicate_fun.snek  error-tag.snek  fun_no_exist.snek  many_prints.snek  no_name_fun.snek  points.snek  shadowed_binding_succ5.snek  simple_fun.snek  simple_samples.snek  simple_vec.snek  tup_in_fun.snek  tuple_size_out_of_bounds.snek  vec_cycle2.snek  vec_get.snek  vec_len.snek  vec_neg_idx.snek  vec_of_var.snek  vec_self_ref_struct_eq.snek  vec_struct_eq.snek  wrong_arg_count.snek
tests.old/: all_tests.rs  basic_tup.snek  fact.llvm  input_in_fun.snek  inv_decl_too_many.snek  multi_tup.snek  no_args.snek  simple_samples.snek
(+11 files in other folders)
