[package]
name = "cobra"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
sexp = "1.1.4"
lazy_static = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }

[dev-dependencies]
prettydiff = "0.6.4"
